Added api commands for stream registration and pushing values
